test_translator/tests/data/checkpoint_2/core/pass/50_decimal_basic/solution.py
from decimal import Decimal


def get_decimal():
    return Decimal("3.14")

def decimal_from_int():
    return Decimal("100")
